--- a/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs_dev.ipynb
@@ -5468,7 +5468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9f77e729-aff0-4829-895c-29b7099bfed9",
    "metadata": {
     "scrolled": true,
@@ -5479,17 +5479,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The minimal flux media consists of 38 compounds and a 1.920260281831602 total influx, with a growth value of 0.10000000000029623\n",
-      "The minimal flux media consists of 44 compounds and a 4.151288539405313 total influx, with a growth value of 0.09999999999941046\n",
+      "The minimal flux media consists of 44 compounds and a 4.151288539476701 total influx, with a growth value of 0.10000000000096863\n",
+      "The minimal flux media consists of 38 compounds and a 1.9202602818291223 total influx, with a growth value of 0.10000000000018255\n",
       "The minimal media of all members:\n",
-      "{'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd03847_e0': 0.0025010597710810748, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00393_e0': 0.0008418477478773926, 'EX_cpd00268_e0': 0.004228248484070404, 'EX_cpd00119_e0': 0.007926360007178198, 'EX_cpd00128_e0': 0.0009156220201908611, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00179_e0': 0.04788995858865938, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00307_e0': 0.010339047120046496, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00793_e0': 0.00028061591586243446, 'EX_cpd00220_e0': 0.0008418477478773934, 'EX_cpd00355_e0': 1.1828469143570204, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00007_e0': 0.02995134166205807, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00311_e0': 0.015469367674740756, 'EX_cpd00209_e0': 0.41906777585716937, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00644_e0': 0.0005612318316441591, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd01080_e0': 0.024916275954454035}}, 'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00393_e0': 0.0008418477478773932, 'EX_cpd00119_e0': 0.007926360007371598, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00179_e0': 0.7846263481768759, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00084_e0': 0.008456496968442263, 'EX_cpd00184_e0': 0.001060383250884341, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00137_e0': 1.3377814852885535, 'EX_cpd00041_e0': 0.834609556212117, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00220_e0': 0.000841847747877422, 'EX_cpd00794_e0': 0.01000423908435776, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd11589_e0': 0.04535314928998137, 'EX_cpd11587_e0': 1.8584445067978568e-17, 'EX_cpd00017_e0': 0.013060758175035839, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00080_e0': 0.08097454046961709, 'EX_cpd00164_e0': 0.8139742085180528, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00007_e0': 0.000701539789600936, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00218_e0': 0.0005612318311411902, 'EX_cpd00644_e0': 0.0005612318319182915, 'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00065_e0': 0.004720191914502181}}}\n",
+      "{'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00080_e0': 0.08097454047861218, 'EX_cpd00794_e0': 0.01000423908435776, 'EX_cpd10515_e0': 0.0008418477478773932, 'EX_cpd00030_e0': 0.00028061591595913114, 'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00184_e0': 0.001060383250884341, 'EX_cpd00007_e0': 0.0007015397898125822, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00041_e0': 0.8346095562463923, 'EX_cpd00118_e0': 0.00028061591595913114, 'EX_cpd00644_e0': 0.0005612318320667331, 'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00179_e0': 0.7846263481866643, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00119_e0': 0.00792636000737159, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd11589_e0': 0.045353149286747205, 'EX_cpd00034_e0': 0.00028061591595913114, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00066_e0': 0.015451949003134503, 'EX_cpd00017_e0': 0.013060758175035839, 'EX_cpd00264_e0': 0.00028061591595913114, 'EX_cpd00164_e0': 0.8139742085539307, 'EX_cpd00137_e0': 1.3377814852729708, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00069_e0': 0.012067660460521141, 'EX_cpd00393_e0': 0.0008418477478773931, 'EX_cpd00084_e0': 0.008456496968590703, 'EX_cpd15606_e0': 2.1206384326989105e-13, 'EX_cpd00218_e0': 0.0005612318318268213, 'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00220_e0': 0.0008418477478774599, 'EX_cpd00028_e0': 0.00028061591595913103, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00063_e0': 0.00028061591595913114}}, 'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd00355_e0': 1.182846914352026, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00156_e0': 0.035223318909162506, 'EX_cpd00209_e0': 0.4190677758576448, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd03847_e0': 0.002501059771085714, 'EX_cpd10515_e0': 0.0008418477478773931, 'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd01080_e0': 0.02491627595448781, 'EX_cpd00007_e0': 0.029951341662218425, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00128_e0': 0.0009156220192244837, 'EX_cpd00644_e0': 0.0005612318319182939, 'EX_cpd00149_e0': 0.00028061591595913114, 'EX_cpd00179_e0': 0.04788995858921322, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00119_e0': 0.007926360007356931, 'EX_cpd00793_e0': 0.00028061591595179977, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00393_e0': 0.0008418477478773939, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00220_e0': 0.0008418477478773934, 'EX_cpd00028_e0': 0.0002806159159591311, 'EX_cpd00051_e0': 0.024669682269889887, 'EX_cpd00307_e0': 0.0103390471196863, 'EX_cpd00268_e0': 0.004228248484253593, 'EX_cpd00107_e0': 0.03753888475401271, 'EX_cpd00311_e0': 0.01546936767687234, 'EX_cpd00063_e0': 0.00028061591595913103}}}\n",
       "\n",
       "Examining the 1 model pairs\n",
-      "cpd11416_c0 bio1: 0.5 cpd11416_c1 + 0.5 cpd11416_c2 --> cpd11416_c0\n",
-      "primary biomass defined bio1\n",
-      "cpd11416_c0 SK_cpd11416_c0: cpd11416_c0 <=> \n",
-      "MainProcess~~0\t['GCF_001421425.1.RAST.fbamodel', 'GCF_001421355.1.RAST.fbamodel']\n",
-      "\tEnvironment0: None\tMRO done\tCIP done\tcostless_mip  done\tMIP done\tPC  done\tBIT done\tGYD done\t\t\tRFC done\t\t\n"
+      "Loading 32 workers and computing the scores 2023-05-21 00:17:20.433714\n"
      ]
     },
     {
@@ -5530,32 +5526,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>GCF_001421425.1.RAST.fbamodel</td>\n",
        "      <td>GCF_001421355.1.RAST.fbamodel</td>\n",
-       "      <td>None0</td>\n",
-       "      <td>0.78947 (30/38)</td>\n",
+       "      <td>GCF_001421425.1.RAST.fbamodel</td>\n",
+       "      <td>Complete</td>\n",
        "      <td>0.68182 (30/44)</td>\n",
+       "      <td>0.78947 (30/38)</td>\n",
        "      <td>24</td>\n",
-       "      <td>10 (2)</td>\n",
-       "      <td>6 (2)</td>\n",
+       "      <td>7 (1)</td>\n",
+       "      <td>10 (3)</td>\n",
        "      <td>0.728774</td>\n",
-       "      <td>amensalism (0.79904)</td>\n",
-       "      <td>0.799041</td>\n",
-       "      <td>0.334624</td>\n",
+       "      <td>amensalism</td>\n",
+       "      <td>0.79904</td>\n",
+       "      <td>0.33462</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                          model1                         model2  media  \\\n",
-       "0  GCF_001421425.1.RAST.fbamodel  GCF_001421355.1.RAST.fbamodel  None0   \n",
+       "                          model1                         model2     media  \\\n",
+       "0  GCF_001421355.1.RAST.fbamodel  GCF_001421425.1.RAST.fbamodel  Complete   \n",
        "\n",
        "        mro_model1       mro_model2 cip mip_model1 mip_model2        pc  \\\n",
-       "0  0.78947 (30/38)  0.68182 (30/44)  24     10 (2)      6 (2)  0.728774   \n",
+       "0  0.68182 (30/44)  0.78947 (30/38)  24      7 (1)     10 (3)  0.728774   \n",
        "\n",
-       "                    bit       gyd       RFC  \n",
-       "0  amensalism (0.79904)  0.799041  0.334624  "
+       "          bit      gyd      RFC  \n",
+       "0  amensalism  0.79904  0.33462  "
       ]
      },
      "metadata": {},
@@ -5565,7 +5561,66 @@
    "source": [
     "%run ../../../modelseedpy/community/mscommscores.py\n",
     "\n",
-    "display(MSCommScores.kbase_output(models, kbase_obj=kbase_api)[0])"
+    "from os import cpu_count\n",
+    "\n",
+    "display(MSCommScores.kbase_output(models, kbase_obj=kbase_api, pool_size=cpu_count()/2)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "d4a0879f-ed4d-4aee-84c0-d21ddc3c052c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('model1', ['model2'])\n",
+      "{'model1': ['model2']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {\"model1\": [\"model2\"]}\n",
+    "print(list(d.items())[0])\n",
+    "print(dict([list(d.items())[0]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5654e0f9-57e1-4d6d-8953-6ffc506175b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pair, models_media, environments, RAST_genomes, lazy_load, kbase_obj\n",
+    "[\n",
+    "    [(<FBAModel GCF_001421355.1.RAST.fbamodel at 0x218aa4f3fd0>, array([<FBAModel GCF_001421425.1.RAST.fbamodel at 0x218a85196d0>],\n",
+    "      dtype=object)), \n",
+    "     {'GCF_001421355.1.RAST.fbamodel': {'media': {'EX_cpd00132_e0': 0.020083080692834803, 'EX_cpd00048_e0': 0.00028061591595913103, 'EX_cpd00793_e0': 0.0002806159159591311, 'EX_cpd00794_e0': 0.01000423908435776, \n",
+    "                                                  'EX_cpd00066_e0': 0.015451949004134175, 'EX_cpd00107_e0': 0.03753888475407817, 'EX_cpd00119_e0': 0.00792636000737159, 'EX_cpd11589_e0': 0.045353149290277804, \n",
+    "                                                  'EX_cpd00149_e0': 0.00028061591595913103, 'EX_cpd00644_e0': 0.0005612318328763397, 'EX_cpd00254_e0': 0.0002806159159591311, 'EX_cpd00264_e0': 0.00028061591595913114, \n",
+    "                                                  'EX_cpd00104_e0': 0.0002806159158932239, 'EX_cpd00164_e0': 0.8139742085323017, 'EX_cpd00322_e0': 0.024179851033723502, 'EX_cpd00028_e0': 0.00028061591595913103, \n",
+    "                                                  'EX_cpd00099_e0': 0.000280615915959131, 'EX_cpd00277_e0': 0.002143191525201281, 'EX_cpd00218_e0': 0.0005612318331931429, 'EX_cpd00184_e0': 0.001060383250884341, \n",
+    "                                                  'EX_cpd00039_e0': 0.028543802049017904, 'EX_cpd00118_e0': 0.00028061591595913537, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00007_e0': 0.0007015397898978277, \n",
+    "                                                  'EX_cpd00041_e0': 0.8346095562181518, 'EX_cpd00393_e0': 0.0008418477478773897, 'EX_cpd00058_e0': 0.00028061591595913103, 'EX_cpd00034_e0': 0.00028061591595913114, \n",
+    "                                                  'EX_cpd00069_e0': 0.012067660460661203, 'EX_cpd00017_e0': 0.01306075817891248, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd10515_e0': 0.0008418477478773932, \n",
+    "                                                  'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd00220_e0': 0.000841847747877378, 'EX_cpd00065_e0': 0.004720191914502181, 'EX_cpd00030_e0': 0.00028061591595913114, \n",
+    "                                                  'EX_cpd00137_e0': 1.3377814852926098, 'EX_cpd00063_e0': 0.00028061591595913114, 'EX_cpd00084_e0': 0.008456496968727899, 'EX_cpd00116_e0': 6.724095163473593e-13, \n",
+    "                                                  'EX_cpd00156_e0': 0.03522331890909705, 'EX_cpd00051_e0': 0.024669682270134108, 'EX_cpd00080_e0': 0.08097454047171064, 'EX_cpd00179_e0': 0.7846263481790601}}, \n",
+    "      'GCF_001421425.1.RAST.fbamodel': {'media': {'EX_cpd00048_e0': 0.0002806159159591311, 'EX_cpd00793_e0': 0.0002806159159591324, 'EX_cpd00066_e0': 0.015451949003134506, 'EX_cpd00107_e0': 0.03753888475401271, \n",
+    "                                                  'EX_cpd00119_e0': 0.007926360007371592, 'EX_cpd00128_e0': 0.0009156220189336296, 'EX_cpd00311_e0': 0.015469367674970164, 'EX_cpd00149_e0': 0.00028061591595913114, \n",
+    "                                                  'EX_cpd00644_e0': 0.0005612318319182976, 'EX_cpd00254_e0': 0.00028061591595913114, 'EX_cpd00264_e0': 0.0002806159159591311, 'EX_cpd01080_e0': 0.024916275954454066, \n",
+    "                                                  'EX_cpd03847_e0': 0.002501059771089567, 'EX_cpd00104_e0': 0.00028061591595913103, 'EX_cpd00322_e0': 0.02417985103372351, 'EX_cpd00028_e0': 0.0002806159159591311, \n",
+    "                                                  'EX_cpd00099_e0': 0.0002806159159591311, 'EX_cpd00215_e0': 0.00028061591595913103, 'EX_cpd00355_e0': 1.1828469143528377, 'EX_cpd00007_e0': 0.02995134166196661, \n",
+    "                                                  'EX_cpd00058_e0': 0.0002806159159591311, 'EX_cpd00393_e0': 0.0008418477478773926, 'EX_cpd00034_e0': 0.0002806159159591311, 'EX_cpd00069_e0': 0.012067660460661203, \n",
+    "                                                  'EX_cpd00017_e0': 0.013060758175035833, 'EX_cpd00136_e0': 0.00028061591595913114, 'EX_cpd00205_e0': 0.0002806159159591311, 'EX_cpd10515_e0': 0.0008418477478773931, \n",
+    "                                                  'EX_cpd00307_e0': 0.010339047120046478, 'EX_cpd00268_e0': 0.0042282484842113615, 'EX_cpd00220_e0': 0.0008418477478773934, 'EX_cpd00065_e0': 0.004720191914502181, \n",
+    "                                                  'EX_cpd00030_e0': 0.00028061591595913103, 'EX_cpd00063_e0': 0.00028061591595913103, 'EX_cpd00209_e0': 0.4190677758573629, 'EX_cpd00156_e0': 0.035223318909162506, \n",
+    "                                                  'EX_cpd00051_e0': 0.024669682270134104, 'EX_cpd00179_e0': 0.0478899585915691}}\n",
+    "     }, None, True, False, <cobrakbase.kbaseapi.KBaseAPI object at 0x00000218A8519250>]\n",
+    "]"
    ]
   },
   {
@@ -7840,7 +7895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
