MSCompatibility and CommScores updates

--- a/examples/Community Modeling/smetana/Vorholt_replication.ipynb
+++ b/examples/Community Modeling/smetana/Vorholt_replication.ipynb
@@ -20212,7 +20212,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     },
     "tags": []
    },
@@ -20295,6 +20296,9 @@
    "execution_count": null,
    "id": "65543502-d39f-4e78-b473-e86d71db1f2f",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -20312,7 +20316,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     },
     "tags": []
    },
@@ -20339,7 +20344,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     },
     "scrolled": true,
     "tags": []
@@ -20427,7 +20433,8 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "outputs_hidden": true,
+     "source_hidden": true
     },
     "tags": []
    },
@@ -20498,6 +20505,9 @@
    "execution_count": null,
    "id": "d11948bf-23e9-4ad6-94d7-62e0ee5f1c86",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -20538,6 +20548,9 @@
    "execution_count": 2,
    "id": "ea3ed9e3-db56-4543-b29e-a342e40b5a05",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -20596,35 +20609,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3d8fb964-53a6-4816-88c7-be35a338cf48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new KBase models\n",
-    "# GCF_001424595 = kbase_api.get_from_ws(\"153650/30/1\")  ;  GCF_001421165 = kbase_api.get_from_ws(\"153650/32/1\")  ;  GCF_001421425 = kbase_api.get_from_ws(\"153650/43/1\")  ;  GCF_001421805 = kbase_api.get_from_ws(\"153650/45/1\")\n",
-    "# GCF_001423105 = kbase_api.get_from_ws(\"153650/36/1\")  ;  GCF_001423785 = kbase_api.get_from_ws(\"153650/38/1\")  ;  GCF_001423665 = kbase_api.get_from_ws(\"153650/40/1\")  ;  GCF_001426165 = kbase_api.get_from_ws(\"153650/64/1\")\n",
-    "# GCF_001422185 = kbase_api.get_from_ws(\"153650/34/1\")  ;  GCF_001421235 = kbase_api.get_from_ws(\"153650/57/1\")  ;  GCF_001423565 = kbase_api.get_from_ws(\"153650/59/1\")\n",
+    "from cobra.io import write_sbml_model\n",
+    "from os import path\n",
     "\n",
+    "# new KBase models\n",
+    "GCF_001424595 = kbase_api.get_from_ws(\"153650/30/1\")  ;  GCF_001421165 = kbase_api.get_from_ws(\"153650/32/1\")  ;  GCF_001421425 = kbase_api.get_from_ws(\"153650/43/1\")  ;  GCF_001421805 = kbase_api.get_from_ws(\"153650/45/1\")\n",
+    "GCF_001423105 = kbase_api.get_from_ws(\"153650/36/1\")  ;  GCF_001423785 = kbase_api.get_from_ws(\"153650/38/1\")  ;  GCF_001423665 = kbase_api.get_from_ws(\"153650/40/1\")  ;  GCF_001426165 = kbase_api.get_from_ws(\"153650/64/1\")\n",
+    "GCF_001422185 = kbase_api.get_from_ws(\"153650/34/1\")  ;  GCF_001421235 = kbase_api.get_from_ws(\"153650/57/1\")  ;  GCF_001423565 = kbase_api.get_from_ws(\"153650/59/1\")\n",
+    "MSmodels = [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]\n",
+    "\n",
+    "for model in MSmodels:\n",
+    "    write_sbml_model(model, path.join(\"Vorholt models\", \"new\", model.id))\n",
+    "\n",
+    "# MS2 reconstructed models\n",
     "GCF_001424595 = kbase_api.get_from_ws(\"154981/88/1\")  ;  GCF_001421165 = kbase_api.get_from_ws(\"154981/96/1\")  ;  GCF_001421425 = kbase_api.get_from_ws(\"154981/89/1\")  ;  GCF_001421805 = kbase_api.get_from_ws(\"154981/90/1\")\n",
     "GCF_001423105 = kbase_api.get_from_ws(\"154981/91/1\")  ;  GCF_001423785 = kbase_api.get_from_ws(\"154981/92/1\")  ;  GCF_001423665 = kbase_api.get_from_ws(\"154981/93/1\")  ;  GCF_001426165 = kbase_api.get_from_ws(\"154981/87/1\")\n",
-    "GCF_001422185 = kbase_api.get_from_ws(\"154981/95/1\")  ;  GCF_001421235 = kbase_api.get_from_ws(\"154981/85/1\")  ;  GCF_001423565 = kbase_api.get_from_ws(\"154981/84/1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6fbc94e8-87b3-4212-8fe3-9ef2cca343af",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from cobra.io import write_sbml_model\n",
-    "# from os import path\n",
+    "GCF_001422185 = kbase_api.get_from_ws(\"154981/95/1\")  ;  GCF_001421235 = kbase_api.get_from_ws(\"154981/85/1\")  ;  GCF_001423565 = kbase_api.get_from_ws(\"154981/84/1\")\n",
+    "MSmodels = [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]\n",
     "\n",
-    "# for model in MSmodels:\n",
-    "#     write_sbml_model(model, path.join(\"vorholt models\", model.id))"
+    "for model in MSmodels:\n",
+    "    write_sbml_model(model, path.join(\"Vorholt models\", \"MS2\", model.id))"
    ]
   },
   {
@@ -20732,16 +20741,6 @@
     "%run ../../../modelseedpy/community/mscommunity.py\n",
     "\n",
     "CommScores.report_generation([GCF_001424595, GCF_001421165], environments)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "14866b2f-69e7-4112-a244-cb20176c76fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MSmodels = [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]"
    ]
   },
   {
