CommScores example updates

--- a/examples/Community Modeling/smetana/Vorholt_replication.ipynb
+++ b/examples/Community Modeling/smetana/Vorholt_replication.ipynb
@@ -20614,7 +20614,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cobra.io import write_sbml_model\n",
+    "from cobra.io import write_sbml_model, save_json_model\n",
     "from os import path\n",
     "\n",
     "# new KBase models\n",
@@ -20624,7 +20624,7 @@
     "MSmodels = [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]\n",
     "\n",
     "for model in MSmodels:\n",
-    "    write_sbml_model(model, path.join(\"Vorholt models\", \"new\", model.id))\n",
+    "    save_json_model(model, path.join(\"Vorholt models\", \"new\", f\"{model.id}.json\"))\n",
     "\n",
     "# MS2 reconstructed models\n",
     "GCF_001424595 = kbase_api.get_from_ws(\"154981/88/1\")  ;  GCF_001421165 = kbase_api.get_from_ws(\"154981/96/1\")  ;  GCF_001421425 = kbase_api.get_from_ws(\"154981/89/1\")  ;  GCF_001421805 = kbase_api.get_from_ws(\"154981/90/1\")\n",
@@ -20633,7 +20633,7 @@
     "MSmodels = [GCF_001424595, GCF_001421165, GCF_001421425, GCF_001421805, GCF_001423105, GCF_001423785, GCF_001423665, GCF_001426165, GCF_001422185, GCF_001421235, GCF_001423565]\n",
     "\n",
     "for model in MSmodels:\n",
-    "    write_sbml_model(model, path.join(\"Vorholt models\", \"MS2\", model.id))"
+    "    save_json_model(model, path.join(\"Vorholt models\", \"MS2\", f\"{model.id}.json\"))"
    ]
   },
   {
